cmake_minimum_required(VERSION 3.17)
project(untitled4 C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled4 main.c ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c ft_strcat.c "ft_memset.c" ft_strnstr.c libft.h ft_memset.c ft_bzero.c ft_memcpy.c ft_memchr.c ft_memcmp.c ft_strlcat.c ft_memccpy.c ft_strncmp.c ft_calloc.c ft_strdup.c ft_substr.c ft_strlen.c ft_memmove.c ft_strjoin.c ft_strtrim.c "ft_split .c" "ft_itoa .c" "ft_strmapi .c" ft_strlcpy.c ft_memcmp.c ft_isalpha.c "ft_putchar_fd .c" "ft_putstr_fd .c" main.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_putendl_fd.c ft_lstnew.c)